# match-variant

./: LICENSE  README.md  pyproject.toml
examples/: enum.py  maybe.py  result.py  roles.py
src/match_variant/: __init__.py  _enum.py  _maybe.py  _result.py  _variant.py  enum.py  maybe.py  result.py  variant.py
tests/: test_enum.py  test_maybe.py  test_result.py  test_variant.py
